--- a/requirements.txt
+++ b/requirements.txt
@@ -1,52 +1,54 @@
-annotated-types
-anyio
-asgiref
-boto3
-botocore
-certifi
-cffi
-charset-normalizer
-cryptography
-decorator
-distro
-Django
-django-allauth
-django-cors-headers
-django-crispy-forms
-django-filter
-django-pwa
-django-rest-auth
-djangorestframework
-et-xmlfile
-fontawesomefree
-fpdf
-greenlet
-h11
-httpcore
-httpx
-idna
-jiter
-jmespath
-numpy
-openai
-openpyxl
-pandas
-pillow
-pycparser
-pydantic
-pydantic_core
-PyJWT
-python-dateutil
-python-dotenv
-pytz
-regex
-requests
-s3transfer
-six
-sniffio
-SQLAlchemy
-sqlparse
-tqdm
-typing_extensions
-tzdata
-urllib3
+annotated-types==0.7.0
+anyio==4.7.0
+asgiref==3.8.1
+boto3==1.35.87
+botocore==1.35.87
+certifi==2024.12.14
+cffi==1.17.1
+charset-normalizer==3.4.1
+cryptography==44.0.0
+decorator==5.1.1
+distro==1.9.0
+dj-rest-auth==7.0.0
+Django==5.1.4
+django-allauth==65.3.1
+django-cors-headers==4.6.0
+django-crispy-forms==2.3
+django-filter==24.3
+django-pwa==2.0.1
+django-rest-auth==0.9.5
+djangorestframework==3.15.2
+et_xmlfile==2.0.0
+exceptiongroup==1.2.2
+fontawesomefree==6.6.0
+fpdf==1.7.2
+greenlet==3.1.1
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
+idna==3.10
+jiter==0.8.2
+jmespath==1.0.1
+numpy==2.2.1
+openai==1.58.1
+openpyxl==3.1.5
+pandas==2.2.3
+pillow==11.0.0
+pycparser==2.22
+pydantic==2.10.4
+pydantic_core==2.27.2
+PyJWT==2.10.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2024.2
+regex==2024.11.6
+requests==2.32.3
+s3transfer==0.10.4
+six==1.17.0
+sniffio==1.3.1
+SQLAlchemy==2.0.36
+sqlparse==0.5.3
+tqdm==4.67.1
+typing_extensions==4.12.2
+tzdata==2024.2
+urllib3==2.3.0
