--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-image-picker": "^7.2.3",
     "react-native-toast-message": "^2.2.1",
     "react-native-web": "~0.19.13"
   },
