--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,11 @@
     "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
     "axios": "^1.7.9",
     "expo": "~52.0.23",
+    "expo-file-system": "~18.0.6",
     "expo-image-picker": "~16.0.3",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
