--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,23 +10,31 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.0",
+    "@pdf-lib/fontkit": "^1.1.1",
     "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native-picker/picker": "2.9.0",
+    "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
     "axios": "^1.7.9",
+    "buffer": "^6.0.3",
     "expo": "~52.0.23",
     "expo-file-system": "~18.0.6",
     "expo-image-picker": "~16.0.3",
+    "expo-sharing": "~13.0.0",
     "expo-status-bar": "~2.0.0",
+    "pdf-lib": "^1.17.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-image-picker": "^7.2.3",
+    "react-native-permissions": "^5.2.1",
     "react-native-toast-message": "^2.2.1",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "~0.19.13",
+    "react-native-webview": "^13.12.5",
+    "expo-media-library": "~17.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
