--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "react-native": "0.76.5",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-image-picker": "^7.2.3",
+    "react-native-paper": "^5.12.5",
     "react-native-permissions": "^5.2.1",
     "react-native-toast-message": "^2.2.1",
     "react-native-web": "~0.19.13",
