--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,10 +31,14 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-gesture-handler": "^2.21.2",
     "react-native-image-picker": "^7.2.3",
     "react-native-paper": "^5.12.5",
     "react-native-permissions": "^5.2.1",
+    "react-native-reanimated": "^3.16.6",
+    "react-native-swipeable": "^0.6.0",
     "react-native-toast-message": "^2.2.1",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "^13.12.5"
   },
