--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@expo/metro-runtime": "~4.0.0",
     "@pdf-lib/fontkit": "^1.1.1",
     "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/drawer": "^7.1.1",
@@ -20,6 +21,7 @@
     "@react-navigation/stack": "^7.1.1",
     "axios": "^1.7.9",
     "buffer": "^6.0.3",
+    "date-fns": "^4.1.0",
     "expo": "~52.0.23",
     "expo-file-system": "~18.0.6",
     "expo-image-picker": "~16.0.3",
