--- a/frontend/app.json
+++ b/frontend/app.json
@@ -8,7 +8,7 @@
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/splash-icon.png",
+      "image": "./assets/eazyinvoice.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
