--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
 annotated-types==0.7.0
 anyio==4.7.0
 asgiref==3.8.1
+azure-cognitiveservices-vision-computervision==0.9.0
+azure-common==1.1.28
+azure-core==1.32.0
+beautifulsoup4==4.13.3
 boto3==1.35.87
 botocore==1.35.87
+cachetools==5.5.1
 certifi==2024.12.14
 cffi==1.17.1
 charset-normalizer==3.4.1
@@ -17,38 +22,67 @@ django-crispy-forms==2.3
 django-filter==24.3
 django-pwa==2.0.1
 django-rest-auth==0.9.5
+django_sonar==0.1.8
 djangorestframework==3.15.2
+djangorestframework-simplejwt==5.3.1
+dropbox==12.0.2
 et_xmlfile==2.0.0
 exceptiongroup==1.2.2
 fontawesomefree==6.6.0
 fpdf==1.7.2
+google-api-core==2.24.1
+google-api-python-client==2.160.0
+google-auth==2.38.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.1
+googleapis-common-protos==1.67.0
 greenlet==3.1.1
 h11==0.14.0
 httpcore==1.0.7
+httplib2==0.22.0
 httpx==0.28.1
 idna==3.10
+isodate==0.7.2
 jiter==0.8.2
 jmespath==1.0.1
+msal==1.31.1
+msrest==0.7.1
 numpy==2.2.1
+o365==2.1.0
+oauthlib==3.2.2
 openai==1.58.1
 openpyxl==3.1.5
+packaging==24.2
 pandas==2.2.3
 pillow==11.0.0
+ply==3.11
+proto-plus==1.26.0
+protobuf==5.29.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
 pycparser==2.22
 pydantic==2.10.4
 pydantic_core==2.27.2
 PyJWT==2.10.1
+pyparsing==3.2.1
+pytesseract==0.3.13
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
 regex==2024.11.6
 requests==2.32.3
+requests-oauthlib==2.0.0
+rsa==4.9
 s3transfer==0.10.4
 six==1.17.0
 sniffio==1.3.1
+soupsieve==2.6
 SQLAlchemy==2.0.36
 sqlparse==0.5.3
+stone==3.3.1
 tqdm==4.67.1
 typing_extensions==4.12.2
 tzdata==2024.2
+tzlocal==5.2
+uritemplate==4.1.1
 urllib3==2.3.0
